crates/swc_ecma_parser/tests/test262-error-references/fail/3bbeaf1dd9ca1159.js.stderr
error: Unexpected token `}`. Expected identifier
 --> $DIR/tests/test262-parser/fail/3bbeaf1dd9ca1159.js:1:6
  |
1 | ({ 5 }) => {}
  |      ^

